# TerminologyService

./: .env.example  .gitignore  README.md  TASK.md  TASK_INSTALL.md  Taskfile.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
core/: settings.py  urls.py
docker/: Dockerfile
refbooks/: admin.py  models.py
refbooks/api/: serializers.py  urls.py  views.py
refbooks/domain/: entities.py  exceptions.py
refbooks/migrations/: 0001_initial.py
refbooks/repositories/: refbook_repository.py
refbooks/services/: refbook_service.py
refbooks/tests/: conftest.py
refbooks/tests/integration/: test_api.py
refbooks/tests/unit/: test_services.py
